[package]
name = "dwm1000"
version = "0.0.1"
edition = "2024"

[dependencies]
byte = "0.2.7"
embedded-hal = "1.0.0"
fixed = "1.29.0"
ieee802154 = "0.6.1"
micromath = "2.1.0"
nb = "1.1.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"


[dependencies.serde]
version = "1.0.130"
default-features = false
features = ["derive"]

[dependencies.ssmarshal]
version = "1.0.0"
default-features = false

[dependencies.num_enum]
version = "0.7.4"
default-features = false

[features]
default = []
std = ["ssmarshal/std", "serde/std", "num_enum/std"]
